--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,17 @@
 body {
     background-color: ivory;
+    margin: 0;
 }
 
 #logo {
     height: 5rem;
-    padding: 0px;
-    margin: 0px;
+    padding: 1rem;
 }
 
 .header {
     background-color: white;
     overflow: hidden;
-    padding: 2rem 1rem;
-    position: fixed;
+    padding 20px 10px;
 }
 
 .header a {
@@ -46,19 +45,22 @@ body {
 
 .header-right {
     float: right;
+    padding: 1rem;
+    padding-top: 1.5rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 957px) {
     .header a {
       float: none;
       display: block;
       text-align: left;
-      color: red;
     }
     .header-right {
       float: none;
     }
     body{
-        background-color: greenyellow;
+    }
+    #logo{
+        height: 3rem;
     }
 }
