--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 .header {
     background-color: white;
     overflow: hidden;
-    padding 20px 10px;
+    padding: 20px 10px;
 }
 
 .header a {
